# ansible-nas

./: .gitignore  404.html  ansible.cfg  index.html  nas.yml  pyproject.toml
assets/js/: main.b8678a76.js
blog/: index.html
blog/archive/: index.html
blog/tags/: index.html
blog/tags/ansible-nas/: index.html
blog/tags/website/: index.html
blog/welcome/: index.html
docs/: index.html
docs/category/applications/: index.html
docs/category/content-management/: index.html
docs/category/contributing/: index.html
docs/category/dashboards/: index.html
docs/category/development-tools/: index.html
docs/category/download-tools/: index.html
docs/category/further-configuration/: index.html
docs/category/gaming/: index.html
docs/category/getting-started/: index.html
docs/category/home-automation/: index.html
docs/category/media-serving/: index.html
docs/category/monitoring/: index.html
docs/category/news/: index.html
docs/category/observability/: index.html
docs/category/other/: index.html
docs/category/stacks/: index.html
docs/category/system-tools/: index.html
docs/contributing/add-an-application/: index.html
docs/contributing/development-environment/: index.html
docs/further-configuration/hardware/: index.html
docs/further-configuration/migrating-from-freenas/: index.html
docs/further-configuration/nfs-exports/: index.html
docs/further-configuration/samba-shares/: index.html
docs/support/: index.html
docs/upgrading/: index.html
group_vars/: all.yml
inventories/my-ansible-nas/: inventory
tasks/: essential.yml
(+137 files in other folders)
