[project]
name = "ansible-nas"
version = "0.1.0"
description = ""
authors = [
    {name = "Tycho Yacub",email = "tychoyacub@gmail.com"}
]
readme = "README.md"
requires-python = "=3.11.10"
dependencies = [
    "ansible (>=11.2.0,<12.0.0)",
    "ansible-core (>=2.18.2,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
