[project]
name = "ansible-nas"
version = "0.1.0"
description = ""
authors = [{ name = "Tycho Yacub", email = "tychoyacub@gmail.com" }]
requires-python = "~=3.11.0"
readme = "README.md"
dependencies = ["ansible (>=11.2.0,<12.0.0)", "ansible-core (>=2.18.2,<3.0.0)"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
